wobscale-paypi/paypi-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wobscale-paypi-client
  labels:
    name: "wobscale-paypi-client"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: wobscale-paypi-client
        app: wobscale-paypi-client
    spec:
      containers:
      - name: c
        image: wobscale/payments-client:6658e07
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
        ports:
        - name: http
          containerPort: 81
