wobscale-paypi/paypi-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wobscale-paypi-server
  labels:
    name: "wobscale-paypi-server"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: wobscale-paypi-server
        app: wobscale-paypi-server
    spec:
      containers:
      - name: s
        image: wobscale/payments-server:ab27706
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 100Mi
        ports:
          - name: http
            containerPort: 8080
