wobscale-paypi/paypi-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-wobscale-website
  labels:
    app: wobscale-paypi-client
spec:
  type: NodePort
  selector:
    app: wobscale-paypi-client
  ports:
  - name: http
    port: 80
    targetPort: 81
