wobscale-paypi/paypi-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-wobscale-website-service
  labels:
    app: wobscale-paypi-server
spec:
  type: NodePort
  selector:
    app: wobscale-paypi-server
  ports:
  - name: http
    port: 80
    targetPort: 8080
