wobscale-paypi/paypi-server-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wobscale-paypi-server
spec:
  tls:
  - hosts:
    - paypi.wobscale.website
    secretName: paypi-wobscale-website-cert-2
  rules:
  - host: paypi.wobscale.website
    http:
      paths:
      - path: "/"
        backend:
          serviceName: pay-wobscale-website-service
          servicePort: 80
